--- a/multiSimple/app/templates/extends_bootstrap.html
+++ b/multiSimple/app/templates/extends_bootstrap.html
@@ -10,13 +10,22 @@
 			<div class="navbar-collapse collapse"> 
 				<ul class="nav navbar-nav"> 
 					<li><a href="/">Home</a></li>
-				</ul> 
-			</div> 
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					{% if current_user.is_authenticated %}
+					<li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+					{% else %}
+					<li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+					{% endif %}
+				</ul>
+			</div>
+
 		</div>
 	</div> 
 {% endblock %}
 {% block content %} 
 	<div class="container">
+		<!-- 产生flash提示信息 -->
 		{% for message in get_flashed_messages() %}
 		<div class="alert alert-warning">
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
