multiSimple新增发邮件确认帐户

--- a/multiSimple/app/templates/index.html
+++ b/multiSimple/app/templates/index.html
@@ -1,6 +1,16 @@
-Hello,
-{% if current_user.is_authenticated %}
-	{{ current_user.username }}
-{% else %}
-	Stranger
-{% endif %}!
+{% extends "base.html" %} 
+{% block title %}Flasky{% endblock %} 
+{% block content %} 
+<div class="container"> 
+	<div class="page-header"> 
+		<h1>
+		Hello,
+		{% if current_user.is_authenticated %}
+			{{ current_user.username }}
+		{% else %}
+			Stranger
+		{% endif %}!
+		</h1>
+	</div>
+</div>
+{% endblock %}
