--- a/multiSimple/app/templates/500.html
+++ b/multiSimple/app/templates/500.html
@@ -1,4 +1,4 @@
-{% extends "extends_bootstrap.html" %} 
+{% extends "base.html" %} 
 {% block title %}Flasky{% endblock %} 
 {% block content %} 
 <div class="container"> <div class="page-header"> <h1>500</h1></div></div>
