--- a/multiSimple/app/templates/auth/register.html
+++ b/multiSimple/app/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends 'extends_bootstrap.html' %}
+{% extends 'base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Flasky - Register{% endblock %}
